Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1323

[C++] Fix compiler warnings with clang-6.0

    XMLWordPrintableJSON

Details

    Description

      Observed when building today

      [1/23] Running thrift compiler on parquet.thrift
      [WARNING:/home/wesm/code/parquet-cpp/src/parquet/parquet.thrift:295] The "byte" type is a compatibility alias for "i8". Use "i8" to emphasize the signedness of this type.
      
      [15/23] Building CXX object CMakeFiles/parquet_objlib.dir/src/parquet/schema.cc.o
      In file included from ../src/parquet/schema.cc:18:
      ../src/parquet/schema.h:376:27: warning: private field 'schema_descr_' is not used [-Wunused-private-field]
        const SchemaDescriptor* schema_descr_;
                                ^
      1 warning generated.
      [20/23] Building CXX object CMakeFiles/parquet_objlib.dir/src/parquet/metadata.cc.o
      ../src/parquet/metadata.cc:84:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::FIXED_LEN_BYTE_ARRAY:
               ^~~~~~~~~~~~~~~~~~~~~~~~~~
      ../src/parquet/metadata.cc:82:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::BYTE_ARRAY:
               ^~~~~~~~~~~~~~~~
      ../src/parquet/metadata.cc:80:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::FLOAT:
               ^~~~~~~~~~~
      ../src/parquet/metadata.cc:78:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::DOUBLE:
               ^~~~~~~~~~~~
      ../src/parquet/metadata.cc:76:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::INT96:
               ^~~~~~~~~~~
      ../src/parquet/metadata.cc:74:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::INT64:
               ^~~~~~~~~~~
      ../src/parquet/metadata.cc:72:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::INT32:
               ^~~~~~~~~~~
      ../src/parquet/metadata.cc:70:10: warning: comparison of two values with different enumeration types in switch statement ('Type::type' and 'parquet::Type::type') [-Wenum-compare-switch]
          case Type::BOOLEAN:
               ^~~~~~~~~~~~~
      8 warnings generated.
      [23/23] Creating library symlink debug/libparquet.so.1 debug/libparquet.so
      

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: