PARQUET-1323: Fix compiler warnings on clang-6

The `schema_descr_` field was unused

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #478 from wesm/clang-6-warnings and squashes the following commits:

7cadfab [Wes McKinney] Fix compiler warnings on clang-6

Change-Id: I70dce46aca443077a400f0f30601405114b9e222